--- a/templates/index.html
+++ b/templates/index.html
@@ -134,14 +134,14 @@
                             <div id="moneyComparisonChart" class="chart-container"></div>
                         </div>
                     </div>
-                    <div class="row mt-4">
+                    <!-- <div class="row mt-4">
                         <div class="col-md-6">
                             <div id="probabilityChart" class="chart-container"></div>
                         </div>
                         <div class="col-md-6">
                             <div id="rtpChart" class="chart-container"></div>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
 
