--- a/templates/index.html
+++ b/templates/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>彩票模拟系统</title>
-    <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+    <script src="https://cdn.plot.ly/plotly-2.27.0.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body>
@@ -23,29 +24,29 @@
                     <div class="row">
                         <div class="col-md-4 mb-3">
                             <label for="num_rounds" class="form-label">模拟轮次</label>
-                            <input type="number" class="form-control" id="num_rounds" value="100" min="1" required>
+                            <input type="number" class="form-control" id="num_rounds" name="num_rounds" value="10" min="1" required>
                         </div>
                         <div class="col-md-4 mb-3">
                             <label for="players_min" class="form-label">最小玩家数</label>
-                            <input type="number" class="form-control" id="players_min" value="1000" min="1" required>
+                            <input type="number" class="form-control" id="players_min" name="players_min" value="10000" min="1" required>
                         </div>
                         <div class="col-md-4 mb-3">
                             <label for="players_max" class="form-label">最大玩家数</label>
-                            <input type="number" class="form-control" id="players_max" value="5000" min="1" required>
+                            <input type="number" class="form-control" id="players_max" name="players_max" value="20000" min="1" required>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-md-4 mb-3">
                             <label for="cards_min" class="form-label">最小购买注数</label>
-                            <input type="number" class="form-control" id="cards_min" value="1" min="1" required>
+                            <input type="number" class="form-control" id="cards_min" name="cards_min" value="1" min="1" required>
                         </div>
                         <div class="col-md-4 mb-3">
                             <label for="cards_max" class="form-label">最大购买注数</label>
-                            <input type="number" class="form-control" id="cards_max" value="5" min="1" required>
+                            <input type="number" class="form-control" id="cards_max" name="cards_max" value="10" min="1" required>
                         </div>
                         <div class="col-md-4 mb-3">
                             <label for="ticket_price" class="form-label">单注金额</label>
-                            <input type="number" class="form-control" id="ticket_price" value="2" min="1" required>
+                            <input type="number" class="form-control" id="ticket_price" name="ticket_price" value="20.00" min="0.01" step="0.01" required>
                         </div>
                     </div>
                     <div class="text-center">
@@ -163,9 +164,60 @@
                                     <th>返奖率</th>
                                 </tr>
                             </thead>
-                            <tbody></tbody>
+                            <tbody id="prizeStatsTableBody"></tbody>
                         </table>
                     </div>
+                </div>
+            </div>
+
+            <!-- 详细数据表格 -->
+            <div class="card mt-4">
+                <div class="card-header d-flex justify-content-between align-items-center">
+                    <h5 class="mb-0">模拟详细数据</h5>
+                    <div class="float-right">
+                        <span id="detailsTableInfo" class="mr-3"></span>
+                        <button class="btn btn-sm btn-success" id="exportExcel">
+                            <i class="fas fa-file-excel"></i> 导出Excel
+                        </button>
+                    </div>
+                </div>
+                <div class="card-body">
+                    <div class="row mb-3">
+                        <div class="col-md-6">
+                            <div class="form-inline">
+                                <label class="mr-2">每页显示：</label>
+                                <select class="form-control form-control-sm" id="pageSize">
+                                    <option value="10">10</option>
+                                    <option value="25">25</option>
+                                    <option value="50">50</option>
+                                    <option value="100">100</option>
+                                </select>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="table-responsive">
+                        <table class="table table-striped table-bordered table-hover">
+                            <thead>
+                                <tr>
+                                    <th class="sortable" data-sort="round">轮次 <i class="fas fa-sort"></i></th>
+                                    <th class="sortable" data-sort="players">投注人数 <i class="fas fa-sort"></i></th>
+                                    <th class="sortable" data-sort="bets">投注金额 <i class="fas fa-sort"></i></th>
+                                    <th class="sortable" data-sort="payouts">派奖金额 <i class="fas fa-sort"></i></th>
+                                    <th class="sortable" data-sort="prize1">一等奖 <i class="fas fa-sort"></i></th>
+                                    <th class="sortable" data-sort="prize2">二等奖 <i class="fas fa-sort"></i></th>
+                                    <th class="sortable" data-sort="prize3">三等奖 <i class="fas fa-sort"></i></th>
+                                    <th class="sortable" data-sort="prize4">四等奖 <i class="fas fa-sort"></i></th>
+                                    <th class="sortable" data-sort="rtp">返奖率 <i class="fas fa-sort"></i></th>
+                                </tr>
+                            </thead>
+                            <tbody id="detailsTableBody">
+                            </tbody>
+                        </table>
+                    </div>
+                    <nav>
+                        <ul class="pagination justify-content-center" id="pagination">
+                        </ul>
+                    </nav>
                 </div>
             </div>
         </div>
